ui/src/app/session-view/session-view.component.scss
@import "../common.scss";
@import "~bootstrap/scss/functions";
@import "~bootstrap/scss/variables";

.content-container {
  overflow: hidden;
  height: 100%;
  padding-left: 60px;
  padding-right: 60px;
  max-width: 100%;
}

.language-dropdown {
  margin-left: 15px;
  min-width: 100px;
  text-align: right;
}

.dropdown-menu {
  overflow-y: auto;
  max-height: 300px;
}

.glowing-icon {
  text-shadow: 0px 0px 12px $primary;
}

.resize-handle {
  height: 20px;
}

.handle-line {
  height: 20px;
  margin-left: 1px;
  margin-right: 1px;
}

:host-context(.bootstrap-dark) {
  .handle-line {
    background-color: $gray-600;
  }
}

:host-context(.bootstrap) {
  .handle-line {
    background-color: $gray-300;
  }
}

.bottom-bar {
  height: inherit;
  width: 100%;
}

.bottom-editors-container {
  height: 100%;
  width: 100%;
  margin: 0px;
  margin-top: 10px;
  padding: 0px;
  max-width: 100%;
}

.bottom-editor-container {
  height: 100%;
  width: 50%;
  padding-bottom: 90px;
}

.bottom-editor-container-left {
  padding-right: 15px;
}

.bottom-editor-container-right {
  padding-left: 15px;
}

.bottom-editor {
  margin-top: 0px;
  margin-bottom: 10px;
  flex-grow: 1;
  height: 100%;
  padding: 0px;
}

.right-column-container {
  display: flex;
  flex-direction: row;
  padding-left: 15px;
}

.empty-space {
  flex-grow: 1;
}

